tests/resource/invalid/type/function/as_statement.mamba
def f(x: Int) => x

# f is a statement because it has no return type
print(f(10))
